Add intro graphics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Brittney's Apple Kingdom</title>
+    <link type="text/css" rel="stylesheet" href="../briemarie.github.io/stylesheets/mywebsite.css">
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  </head>
+
   <body>
-      Hello DBC!
+      <h1>Take <span>a</span> Bite</h1>
+
+    <a href="http://briemarie.github.io/">
+      <img src="website-pics/il_fullxfull.469791699_26f8.jpg"/>
+    </a>
   </body>
 </html>
 
