--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Brittney's Apple Kingdom</title>
-    <link type="text/css" rel="stylesheet" href="../briemarie.github.io/stylesheets/mywebsite.css">
+    <link type="text/css" rel="stylesheet" href="../stylesheets/mywebsite.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   </head>
 
