--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>Take <span>a</span> Bite</h1>
 
-    <a href="http://briemarie.github.io/">
+    <a href="http://briemarie.github.io/blog/c1-chefs-kitchen.html">
       <img src="website-pics/il_fullxfull.469791699_26f8.jpg"/>
     </a>
   </body>
