--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Brittney's Apple Kingdom</title>
-    <link type="text/css" rel="stylesheet" href="../briemarie.github.io/stylesheets/homepage.css">
+    <link type="text/css" rel="stylesheet" href="../stylesheets/homepage.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   </head>
 
@@ -13,7 +13,7 @@
  <small>Junior Dev In-Training </small><br />
  <small>Oakland, California</small> </h1>
 
- <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="#"> About Me </a> ~ <a href="#"> Education </a>~<a href="#"> Projects </a> ~ <a href="http://briemarie.github.io/blog/c1-chefs-kitchen.html"> Blogs</a>
+ <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="#"> Education </a>~<a href="#"> Projects </a> ~ <a href="http://briemarie.github.io/blog/c1-chefs-kitchen.html"> Blogs</a>
 </h3>
 
 </body>
