--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-      <h1>Take <span>a</span> Bite</h1>
+      <h1>Take <span>a</span> Byte</h1>
 
     <a href="http://briemarie.github.io/homepage.html">
       <img src="website-pics/il_fullxfull.469791699_26f8.jpg"/>
