--- a/gps1-2.html
+++ b/gps1-2.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link type="text/CSS" rel="stylesheet" href="/Users/BrieMarie/DBC/phase-0-unit-1/week-3/9-gps1-2/gps1-2.css">
+    <link type="text/CSS" rel="stylesheet" href="../gps1-2.css">
     <title>Why Pair Programming is Great</title>
    </head>
 
@@ -38,7 +38,7 @@
       </p>
     </div>
 
-    <<h3>About the Session that Created this Page</h3>
+    <h3>About the Session that Created this Page</h3>
     <p>In order to create the webpage you are seeing now, Jesse and myself practiced Pair Programming. I was the driver for the HTML code, and he was the driver for the CSS code. We kept a good line of communication open, no matter who was driving or navigating, which made our session very successful. The driver should not simply write everything the navigator is telling them, and they also should never ignore the navigator and type what they want to type-if they disagree, they need to stop and open up a dialogue about their concerns. This didn't really happen between the two of us since we had a clear vision about what to do from our collaborative wifeframe, but we did engage each other with styling ideas and code recommendations throughout the session. Communication was key, especailly when he would notice that I made an error while driving, such as forgetting to close a tag. Helping each other is also key. If one person knows more about something, let your partner know, like Jesse did for me with classes and id's. Pair Programming is a collaboration, not a competition about who knows more or who is better at driving or navigating. When you become team mates, like Jesse and I did, pairing becomes really fun because it is a way to work and socialize at the same time.
 
   </body>
