--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
  <small>Junior Dev In-Training </small><br />
  <small>Oakland, California</small> </h1>
 
- <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="#"> Education </a>~<a href="#"> Projects </a> ~ <a href="http://briemarie.github.io/blog/c1-chefs-kitchen.html"> Blogs</a>
+ <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="#"> Education </a>~<a href="http://briemarie.github.io/gps1-2.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/c1-chefs-kitchen.html"> Blogs</a>
 </h3>
 
 </body>
