Add github link

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,9 @@
 
 <h1><big>Brittney Marie Hodson</big><br/>
  <small>Junior Dev In-Training </small><br />
- <small>Oakland, California</small> </h1>
+ <small>Oakland, California</small><br />
+ <a href="https://github.com/briemarie"><img src="https://octodex.github.com/images/Professortocat_v2.png"/></a>
+</h1>
 
  <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="#"> Education </a>~<a href="http://briemarie.github.io/gps1-2.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blogs</a>
 </h3>
