--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-<img src="website-pics/IMG_2074.JPG" />
+<img src="website-pics/IMG_2074.JPG" height="500" width="500" /> />
 
 <h1><big>Brittney Marie Hodson</big><br/>
  <small>Junior Dev In-Training </small><br />
