Add education links

--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Knowledge of Good and Evil</title>
-    <link type="text/css" rel="stylesheet" href="/Users/BrieMarie/DBC/briemarie.github.io/stylesheets/education.css">
+    <link type="text/css" rel="stylesheet" href="/../stylesheets/education.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   </head>
 
