Fix princess img

--- a/warriorprincess.html
+++ b/warriorprincess.html
@@ -7,7 +7,7 @@
 
   <body>
 
-    <h1>Welcome Princess Alyth</h1>
+    <h1 id= "princess">Welcome Princess Alyth</h1>
 
     <img id= "princess" src= "http://media-cache-ak0.pinimg.com/236x/32/e0/b4/32e0b43d61147cc97ca7773caa3f5a17.jpg"/>
     <h2 id= "castle">Crystal Castle</h2>
