--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link type="text/CSS" rel="stylesheet" href="../cheatsheet.css">
   <title>JavaScript Prototypes</title>
 </head>
 
@@ -17,7 +18,7 @@
 
   <img src= "../website-pics/prototype-tree.jpg"/>
 
-  <div class= "Array">
+  <div>
   Most common Array methods:<br />
   .pop, .push<br />
   .shift, .unshift<br />
@@ -28,7 +29,7 @@
 
   <br />
 
-  <div class= "Function">
+  <div>
   Most common Function methods:<br />
   .call<br />
   .bind<br />
@@ -37,14 +38,14 @@
 
   <br />
 
-  <div class= "RegExp">
+  <div>
   Most common RegExp methods:<br />
   .exec<br />
   .test</div>
 
   <br />
 
-  <div class= "Date">
+  <div>
   Most common Date methods:<br />
   .getDate, .getDay<br />
   .getHours, .getMinutes<br />
