--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -16,9 +16,9 @@
 
   <p>All prototypes are objects, and they trace up the tree to the Object prototype, and the Object prototype is itself an object. Good ol Object Oriented Programming at work here.</p>
 
-  <img src= "../website-pics/prototype-tree.jpg"/>
+  <img src= "../website-pics/prototype-tree.jpg" class="centeredImage"/>
 
-  <div>
+  <div class= "Array">
   Most common Array methods:<br />
   .pop, .push<br />
   .shift, .unshift<br />
@@ -29,7 +29,7 @@
 
   <br />
 
-  <div>
+  <div class= "Function">
   Most common Function methods:<br />
   .call<br />
   .bind<br />
@@ -38,14 +38,14 @@
 
   <br />
 
-  <div>
+  <div class= "RegExp">
   Most common RegExp methods:<br />
   .exec<br />
   .test</div>
 
   <br />
 
-  <div>
+  <div class= "Date">
   Most common Date methods:<br />
   .getDate, .getDay<br />
   .getHours, .getMinutes<br />
