--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <link type="text/CSS" rel="stylesheet" href="../cheatsheet.css">
+  <style type="text/css">
+  .centeredImage
+    {
+    text-align:center;
+    display:block;
+    }
+  </style>
   <title>JavaScript Prototypes</title>
 </head>
 
@@ -14,9 +21,9 @@
   <p>Prototypes are Capitalized to distinguish them from other objects.<br />
   JS comes with built in prototypes, but you can also create your own using, most commonly, the constructor function with the new syntax (example below).</p>
 
-  <p>All prototypes are objects, and they trace up the tree to the Object prototype, and the Object prototype is itself an object. Good ol Object Oriented Programming at work here.</p>
+  <h1>All prototypes are objects, and they trace up the tree to the Object prototype, and the Object prototype is itself an object. Good ol Object Oriented Programming at work here.</h1>
 
-  <img src= "../website-pics/prototype-tree.jpg"/>
+  <img src= "../website-pics/prototype_tree.jpg"class="centeredImage"/>
 
   <div>
   Most common Array methods:<br />
