Add color, margin

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -3,13 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <link type="text/CSS" rel="stylesheet" href="../cheatsheet.css">
-  <style type="text/css">
-  .centeredImage
-    {
-    text-align:center;
-    display:block;
-    }
-  </style>
   <title>JavaScript Prototypes</title>
 </head>
 
@@ -23,12 +16,11 @@
 
   <h3>All prototypes are objects, and they trace up the tree to the Object prototype, and the Object prototype is itself an object. Good ol Object Oriented Programming at work here.</h3>
 
-  <img src= "../website-pics/prototype_tree.jpg"class="centeredImage"/>
+  <img src= "../website-pics/prototype_tree.jpg"/>
 
   <h3>Most common methods for most common prototypes:</h3>
 
   <table>
-    <table border="1" style="width:80%">
     <thead>
       <tr>
         <th>Array</th>
