--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -21,6 +21,7 @@
   <h3>Most common methods for most common prototypes:</h3>
 
   <table>
+    <table border="1" style="width:100%">
     <thead>
       <tr>
         <th>Array</th>
