Add relative path

--- a/projects/ProjectIndex.html
+++ b/projects/ProjectIndex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link type="text/CSS" rel="stylesheet" href="../ProjectIndex.css">
+  <link type="text/CSS" rel="stylesheet" href="../projects/ProjectIndex.css">
   <title>Projects</title>
 </head>
 
