--- a/projects/cheatsheet.html
+++ b/projects/cheatsheet.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link type="text/CSS" rel="stylesheet" href="../cheatsheet.css">
+  <link type="text/CSS" rel="stylesheet" href="../projects/cheatsheet.css">
   <title>JavaScript Prototypes</title>
 </head>
 
