--- a/projects/warriorprincess.html
+++ b/projects/warriorprincess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link type="text/CSS" rel="stylesheet" href="../warriorprincess.css">
+    <link type="text/CSS" rel="stylesheet" href="../projects/warriorprincess.css">
     <title>Warrior Princess</title>
    </head>
 
