Add project link

--- a/projects/gps1-2.html
+++ b/projects/gps1-2.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link type="text/CSS" rel="stylesheet" href="../gps1-2.css">
+    <link type="text/CSS" rel="stylesheet" href="../projects/gps1-2.css">
     <title>Why Pair Programming is Great</title>
    </head>
 
