--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
  <small>Oakland, California</small>
 </h1>
 
- <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/gps1-2.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blogs</a><br />
+ <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blogs</a><br />
 <a href="https://github.com/briemarie"><img src="https://octodex.github.com/images/Professortocat_v2.png" height="60" width="60" /></a><a href="https://twitter.com/briemarie5"><img src="http://gigaom2.files.wordpress.com/2011/06/apple-twitter.jpg" height="60" width="60" /></a>
 </h3>
 
