--- a/projects/ProjectIndex.html
+++ b/projects/ProjectIndex.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> About Me </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blogs</a></h3>
+
   <h1>Click the links below to navigate to projects I have created or co-created</h1>
 
   <h3> Pair Programming: Why it is Awesome </h3>
