--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Take <span>a</span> Byte</h1>
 
     <a href="http://briemarie.github.io/homepage.html">
-      <img src="website-pics/snowwhite.jpg"/>
+      <img src="../website-pics/snowwhite.jpg"/>
     </a>
   </body>
 </html>
