Fix education page

--- a/education.html
+++ b/education.html
@@ -10,11 +10,11 @@
 
     <img src="../website-pics/Mira_Costa_College_Logo_4c.png" />
 
-    <h3>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavorial Sciences in May of 2012. The emphasis of my studies was in various areas of Psychology.</h3>
+    <h3>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavorial Sciences in May of 2012. The emphasis of my studies was in various areas of Psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. </h3>
 
     <img src="../website-pics/ucberkeley.png" />
 
-    <h3>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was Romantic and Modern poetry.</h3>
+    <h3>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was Romantic and Modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society.</h3>
 
     <img src="../website-pics/Dev-Bootcamp.png" />
 
