--- a/homepage.html
+++ b/homepage.html
@@ -7,16 +7,17 @@
   </head>
 
   <body>
-<img src="../website-pics/appleMe.JPG" height="500" width="500" />
 
-<h1><big>Brittney Marie Hodson</big><br/>
- <small>Junior Dev In-Training </small><br />
- <small>Oakland, California</small>
-</h1>
+    <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> Profile </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blog</a></h3>
 
- <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> Profile </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blog</a><br />
-<a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><<img class= "logo" src="../website-pics/linkedin.png" height="60" width="60" /></a><a href="https://github.com/briemarie"><<img class= "logo" src="../website-pics/github.png" height="60" width="60" /></a><a href="https://twitter.com/briemarie5"><<img class= "logo" src="../website-pics/twitter.png" height="60" width="60" /></a>
-</h3>
+    <img src="../website-pics/appleMe.JPG" height="500" width="500" />
+
+    <h1><big>Brittney Marie Hodson</big><br/>
+      <small>Junior Dev In-Training </small><br />
+      <small>Oakland, California</small>
+    </h1>
+
+  <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><<img class= "logo" src="../website-pics/linkedin.png" height="60" width="60" /></a><a href="https://github.com/briemarie"><<img class= "logo" src="../website-pics/github.png" height="60" width="60" /></a><a href="https://twitter.com/briemarie5"><<img class= "logo" src="../website-pics/twitter.png" height="60" width="60" /></a>
 
 </body>
 </html>
