--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
       <small>Oakland, California</small>
     </h1>
 
-    <h6 class= "logo"><a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img id= "logos" src="../website-pics/linkedin.png" height="60" width="60" /></a><a href="https://github.com/briemarie"><img id= "logos" src="../website-pics/github.png" height="60" width="60" /></a><a href="https://twitter.com/briemarie5"><img id= "logos" src="../website-pics/twitter.png" height="60" width="60" /></a><a href="mailto:thebriemarie@gmail.com"><img id=" logos" src="../website-pics/gmail.png" height="60" width="60" /></a></h6>
+    <div><a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" height="60" width="60" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png" height="60" width="60" /></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png" height="60" width="60" /></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png" height="60" width="60" /></a></div>
 
     </body>
 </html>
