--- a/projects/gps1-2.html
+++ b/projects/gps1-2.html
@@ -25,14 +25,14 @@
 
 
     <div class="Left"><h3>What is a Driver?</h3>
-      <p><img src="http://michigancriminallawyer-blog.com/driving29%5B1%5D.jpg" />
+      <p><img src="../website-pics/dogdriving.jpg" />
       The driver is the one writing the code. They determine the syntax and
       the specific code to be used.
       </p>
     </div>
 
     <div class="Right"><h3>What is the Navigator?</h3>
-      <p><img src="http://upload.wikimedia.org/wikipedia/commons/0/05/USS-Audubon_Signal-Bridge_Lt-Lakusta-Ship-Navigator_1945.png" />
+      <p><img src="../website-pics/navigator.png" />
        The navigator guides the driver and walks him/her through the steps.
        They address any errors that may come up.
       </p>
