--- a/projects/warriorprincess.html
+++ b/projects/warriorprincess.html
@@ -9,15 +9,15 @@
 
     <h1 id= "princess">Welcome Princess Alyth</h1>
 
-    <img id= "princess" src= "http://media-cache-ak0.pinimg.com/236x/32/e0/b4/32e0b43d61147cc97ca7773caa3f5a17.jpg"/>
+    <img id= "princess" src= "../website-pics/warriorprincess.jpg"/>
     <h2 id= "castle">Crystal Castle</h2>
-    <img id= "castle" src="http://24.media.tumblr.com/06201af19f307eb61667eb8993ec3443/tumblr_mu4i7vJimD1rb1znmo1_500.jpg"/>
+    <img id= "castle" src="../website-pics/crystalcastle.jpg"/>
     <h2 id= "mountain">Magical Mountain</h2>
-    <img id= "mountain" src="http://uploads7.wikiart.org/images/nicholas-roerich/tibet-himalayas-1933.jpg"/>
+    <img id= "mountain" src="../website-pics/himalayas.jpg"/>
     <h2 id= "forest">Faerie Forest</h2>
-    <img id= "forest" src="http://images2.layoutsparks.com/1/209940/fairy-nature-lovely-image.jpg"/>
+    <img id= "forest" src="../website-pics/fairyforest.jpg"/>
     <h2 id= "battle">Bloody Battle Lands</h2>
-    <img id= "battle" src="http://fc07.deviantart.net/fs48/i/2009/204/d/5/BattleGround_by_Bezduch.jpg"/>
+    <img id= "battle" src="../website-pics/BattleGround.jpg"/>
 
   </body>
 </html>
