--- a/projects/ProjectIndex.html
+++ b/projects/ProjectIndex.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <div id="bg"><img src="../website-pics/techwallpaper.jpg" alt=""></div>
+ <body background= "../website-pics/techwallpaper.jpg">
 
   <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> Profile </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blog</a></h3>
 
