--- a/projects/ProjectIndex.html
+++ b/projects/ProjectIndex.html
@@ -8,7 +8,7 @@
 
 <body>
 
- <body background= "../website-pics/techwallpaper.jpg">
+ <body background= "../website-pics/codewallpaper.jpg">
 
   <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> Profile </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blog</a></h3>
 
@@ -21,6 +21,6 @@
   <a href= "http://briemarie.github.io/projects/warriorprincess.html"><img src ="../website-pics/warriorprincess.jpg"/></a>
 
   <h3> JavaScript Prototypes Cheatsheet</h3>
-  <a href= "http://briemarie.github.io/projects/cheatsheet.html"><img src ="../website-pics/prototype.gif"/></a>
+  <a href= "http://briemarie.github.io/projects/cheatsheet.html"><img id= "cheatsheet" src ="../website-pics/prototype.gif"/></a>
 </body>
 </html>
