--- a/education.html
+++ b/education.html
@@ -6,9 +6,11 @@
   </head>
 
   <body>
+    <body background= "../website-pics/redwallpaper.jpg" />
+
     <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> Profile </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blog</a></h3>
 
-    <img src="../website-pics/Dev-Bootcamp.png" />
+    <img id ="DBC" src="../website-pics/Dev-Bootcamp.png" />
 
     <h3>I am currently attending Dev Bootcamp in San Francisco, and anticipate completing the program in February of 2015. The program is preparing me to be a full-stack junior developer with a foucs on app development with Ruby on Rails.</h3>
 
