--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <body background= "../website-pics/honeycomb.jpg" />
 
     <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/homepage.html"> Profile </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/projects/ProjectIndex.html"> Projects </a> ~ <a href="http://briemarie.github.io/blog/blog-journal.html"> Blog </a></h3>
 
