--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     <img src="../website-pics/appleMe.JPG" height="500" width="500" />
 
     <h1><big>Brittney Marie Hodson</big><br/>
-      <small>Junior Dev In-Training </small><br />
+      <small>Web & Mobile App Developer</small><br />
       <small>Oakland, California</small>
     </h1>
 
