--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>brieMarie</title>
+    <title>brie.marie</title>
     <link type="text/css" rel="stylesheet" href="../website.css">
   </head>
 
