--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <body>
       <img src="../arttechmagic.jpg"/>
+
+      <h1>brie.marie</h1>
+      <h3>coder.painter.poet.traveler.giggler</h3>
+
   </body>
 </html>
 
