chnage to upcase

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
       <img src="../arttechmagic.jpg"/>
 
-      <h1>brie.marie</h1>
-      <h3>coder.painter.poet.traveler.giggler</h3>
+      <h1>BRIE.MARIE</h1>
+      <h3>CODER.PAINTER.POET.TRAVELER.GIGGLER</h3>
 
   </body>
 </html>
