--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>brie.marie</title>
     <link type="text/css" rel="stylesheet" href="../website.css">
-    <link href='http://fonts.googleapis.com/css?family=Teko:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
