Change pic, less blurry

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
 
   <body>
-      <img src="../arttechmagic.jpg"/>
+      <img src="../artstechmagic.jpg"/>
 
       <h1>BRIE.MARIE</h1>
-      <h3>CODER.PAINTER.POET.TRAVELER.GIGGLER</h3>
+      <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
   </body>
 </html>
