revert to previous image

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>brie.marie</title>
     <link type="text/css" rel="stylesheet" href="../website.css">
-    <link href='http://fonts.googleapis.com/css?family=Teko:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
-      <img src="../arttechmagic.jpg"/>
+      <img src="../artstechmagic.jpg"/>
 
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
