--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      <h3><a href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
 
   </body>
 </html>
