right/left aligment for nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h3><a href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
+      <h3 id="left"><a href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a></h3>
+      <h3 id="right"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
