Move nav bar to top right

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   </head>
 
   <body>
+      <h3><a href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
       <img src="../artstechmagic.jpg"/>
 
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-
-      <h3><a class="left" href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a class="left" href="http://briemarie.github.io/education.html">EDUCATION</a><a class="right" href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a class="right" href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
