--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-      <h3><a href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
+
+      <h3><a class="left" href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a class="left" href="http://briemarie.github.io/education.html">EDUCATION</a><a class="right" href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a class="right" href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
+
       <img src="../artstechmagic.jpg"/>
 
       <h1>BRIE.MARIE</h1>
