Add span for right float

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
   <body>
 
-      <h3 id="left"><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a></h3>
-      <h3 id="right"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></h3>
+      <h3><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
       <img src="../artstechmagic.jpg"/>
 
