--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
   </head>
 
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-3"><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a></div>
+        <div class="col-xs-3"><a href="http://briemarie.github.io/education.html">EDUCATION</a></div>
+        <div class="col-xs-3"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a></div>
+        <div class="col-xs-3"><a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></div>
+      </div>
+  </div>
 
-      <h3><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
+      <!-- <h3><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3> -->
 
       <img src="../artstechmagic.jpg"/>
 
