--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-xs-3"><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a></div>
-        <div class="col-xs-3"><a href="http://briemarie.github.io/education.html">EDUCATION</a></div>
-        <div class="col-xs-3"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a></div>
-        <div class="col-xs-3"><a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></div>
+        <div class="col-md-3"><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a></div>
+        <div class="col-md-3"><a href="http://briemarie.github.io/education.html">EDUCATION</a></div>
+        <div class="col-md-3"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a></div>
+        <div class="col-md-3"><a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></div>
       </div>
   </div>
 
