--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-md-3"><a  href="http://briemarie.github.io/homepage.html"> ABOUT ME</a></div>
+        <div class="col-md-3"><a href="http://briemarie.github.io/homepage.html"> ABOUT ME</a></div>
         <div class="col-md-3"><a href="http://briemarie.github.io/education.html">EDUCATION</a></div>
         <div class="col-md-3"><a href="http://briemarie.github.io/projects/ProjectIndex.html">PORTFOLIO</a></div>
         <div class="col-md-3"><a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></div>
