--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>BRIE.MARIE.PORTFOLIO</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link type="text/css" rel="stylesheet" href="../website.css">
+    <link type="text/css" rel="stylesheet" href="../stylesheets/website.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
   </head>
 
