add blog image file

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 
   <body>
 
-      <img src="../artstechmagic.jpg"/>
+      <img src="../website-pics/artstechmagic.jpg"/>
 
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
