--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,13 @@
 
   <body>
 
-      <img src="../website-pics/artstechmagic.jpg"/>
-
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+
+      <p>As a part of DevBootcamp's curriculum, I completed a solo app challenge during phase 2, week 6. I developed an app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be a music player that cross references the chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.</p>
+
+      <p>In order to graduate DevBootcamp, groups completed larger scale apps. My team's app, Vendable, was developed using a Node back-end and an Angular/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city- complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items. The list pulls the data and updates the user's list with item prices and a grand total. When the user is ready, the app uses the Google Maps API to route the directions to the chosen store.</p>
+
 
       <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
