--- a/aboutme.html
+++ b/aboutme.html
@@ -10,10 +10,10 @@
 
   <body>
 
-      <img src="../website-pics/artstechmagic.jpg"/>
-
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+
+      <p>I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking and child prostitution, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.</p>
 
       <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
