Fix broken styling for h4 tags, now p tags

--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 
       <img id ="DBC" src="../website-pics/Dev-Bootcamp.png" />
 
-      <h4>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel prepared to work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile front-end development with Ionic.</h4>
+      <p>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel prepared to work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile front-end development with Ionic.</p>
 
       <img src="../website-pics/ucberkeley.png" />
 
