--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h4 class="uppercase">I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking and child prostitution, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.</h4>
+      <h4>I AM A PUBLISHED POET TURNED CREATIVE CODER. I AM AN ART ENTHUSIAST AND PAINTER TRANSFORMING PERSONAL AESTHETIC APPEALS INTO FRONT-END WEB AND APP DESIGN. I BELIEVE IN INVENTING AND REINVENTING MYSELF OFTEN. I AM A RIGHT-BRAIN, BIG-PICTURE THINKER BALANCING THE WORLD OF LINEAR LOGIC AND REASON. I AM PASSIONATE ABOUT REDUCING HUMAN TRAFFICKING AND CHILD PROSTITUTION, BOTH LOCALLY AND GLOBALLY. I BELIEVE IN DANCING AND LAUGHING AS MUCH AS POSSIBLE. I LOVE FOGGY MORNINGS AND ESPRESSO, MAKING SAN FRANCISCO AND SEATTLE MY TWO FAVORITE CITIES.</h4>
 
       <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
